--- a/K8sInstallMasterWorker.yml
+++ b/K8sInstallMasterWorker.yml
@@ -135,6 +135,7 @@
       copy:
         src: /etc/kubernetes/admin.conf
         dest: /root/.kube/config
+        remote_src: yes
         owner: root
         group: root
         mode: '0644'
