--- a/DeployTemplate.yml
+++ b/DeployTemplate.yml
@@ -31,15 +31,15 @@
           num_cpus: 4 #For example to create a VM with 2 sockets of 4 cores, specify num_cpus: 8 and num_cpu_cores_per_socket: 4
           num_cpu_cores_per_socket: 2
           scsi: paravirtual
-          memory_reservation_lock: False
-          mem_limit: 8096
-          mem_reservation: 4096
+          #memory_reservation_lock: False
+          #mem_limit: 8096
+          #mem_reservation: 4096
           #cpu_limit: 8096
           #cpu_reservation: 4096
           #max_connections: 5
-          hotadd_cpu: True
-          hotremove_cpu: True
-          hotadd_memory: False
+          #hotadd_cpu: True
+          #hotremove_cpu: True
+          #hotadd_memory: False
           #version: 12 # Hardware version of virtual machine
           boot_firmware: "efi"
         #cdrom:
