--- a/DeployTemplate.yml
+++ b/DeployTemplate.yml
@@ -9,6 +9,12 @@
     vm_name: ""
     dc: ""
     folder: ""
+    template: ""
+    vm_ram: ""
+    vm_cpus: ""
+    vm_cpu_cores_per_socket: ""
+    vm_name: ""
+    vm_disk_gb: ""
     
   tasks:
     - name: Create a virtual machine from a template
@@ -19,17 +25,17 @@
         validate_certs: no
         datacenter: "{{ dc }}"
         folder: "{{ folder }}" 
-        name: testvm_2
+        name: "{{ vm_name }}"
         state: poweredon
-        template: Template_CentOS_7
+        template: "{{ template }}"
         disk:
-        - size_gb: 50
+        - size_gb: "{{ vm_disk_gb }}"
           type: thin
           datastore: vsanDatastore
         hardware:
-          memory_mb: 512
-          num_cpus: 4 #For example to create a VM with 2 sockets of 4 cores, specify num_cpus: 8 and num_cpu_cores_per_socket: 4
-          num_cpu_cores_per_socket: 2
+          memory_mb: "{{ vm_ram }}"
+          num_cpus: "{{ vm_cpus }}" #For example to create a VM with 2 sockets of 4 cores, specify num_cpus: 8 and num_cpu_cores_per_socket: 4
+          num_cpu_cores_per_socket: "{{ vm_cpu_cores_per_socket }}"
           scsi: paravirtual
           #memory_reservation_lock: False
           #mem_limit: 8096
