--- a/DeployTemplate.yml
+++ b/DeployTemplate.yml
@@ -33,8 +33,8 @@
         - size_gb: "{{ vm_disk_gb }}"
           type: thin
           datastore: vsanDatastore
-        customization:
-          hostname: "{{ vm_hostname }}"
+        #customization:
+        #  hostname: "{{ vm_hostname }}"
         hardware:
           memory_mb: "{{ vm_ram }}"
           num_cpus: "{{ vm_cpus }}" #For example to create a VM with 2 sockets of 4 cores, specify num_cpus: 8 and num_cpu_cores_per_socket: 4
@@ -60,6 +60,6 @@
         wait_for_ip_address: yes
       delegate_to: localhost
       #register: deploy
-    #- hostname:
-    #  name: "{{ vm_hostname }}"
-    #  use: "{{ vm_os }}"
+    - hostname:
+      name: "{{ vm_hostname }}"
+      use: "{{ vm_os }}"
