--- a/InstallOpenShiftBastion.yml
+++ b/InstallOpenShiftBastion.yml
@@ -34,6 +34,7 @@
         src: /tmp/ocp4/{{ item }}
         dest: /usr/local/bin
         mode: '0755'
+        remote_src: yes
       with_items:
         - oc
         - kubectl
