--- a/InstallOpenShiftBastion.yml
+++ b/InstallOpenShiftBastion.yml
@@ -39,7 +39,13 @@
         - oc
         - kubectl
         - openshift-install
-
+        
+    - name: Create .ssh directory if it does not exist
+      file:
+        path: ~/.ssh
+        state: directory
+        mode: '0755'
+        
     - name: Create SSH Key
       openssh_keypair:
         path: ~/.ssh/id_rsa
