--- a/DeployTemplateOpenShift.yml
+++ b/DeployTemplateOpenShift.yml
@@ -73,6 +73,6 @@
             value: "base64"
           - name: disk.EnableUUID
             value: "TRUE"
-          - name: guestinfo.ignition.config.data
+          - name: "guestinfo.ignition.config.data"
             value: "{{ ignition_file }}"
       delegate_to: localhost
