--- a/DeployTemplateOpenShift.yml
+++ b/DeployTemplateOpenShift.yml
@@ -37,7 +37,7 @@
           datastore: "{{ datastore }}"
         hardware:
           memory_mb: "{{ vm_ram }}"
-          #mem_reservation: "{{ vm_ram }}"
+          mem_reservation: "{{ vm_ram }}"
           num_cpus: "{{ vm_cpus }}" #For example to create a VM with 2 sockets of 4 cores, specify num_cpus: 8 and num_cpu_cores_per_socket: 4
           num_cpu_cores_per_socket: "{{ vm_cpu_cores_per_socket }}"
           scsi: paravirtual
@@ -46,13 +46,13 @@
         - name: VM Network
           mac: "{{ vm_mac }}"
           type: dhcp
-        customvalues:
+#        customvalues:
 #          - key: guestinfo.ignition.config.data.encoding
 #            value: "base64"
 #          - key: disk.EnableUUID
 #            value: "TRUE"
-          - key: guestinfo.ignition.config.data
-            value: "{{ ignition_file }}"
+#          - key: guestinfo.ignition.config.data
+#            value: "{{ ignition_file }}"
         #customization: 
         #  hostname: "{{ vm_hostname }}"
         #wait_for_ip_address: yes
