--- a/DeployTemplateOpenShift.yml
+++ b/DeployTemplateOpenShift.yml
@@ -43,7 +43,7 @@
           scsi: paravirtual
           boot_firmware: "efi"
         networks:
-        - name: VM Network
+        - name: "VM Network"
           mac: "{{ vm_mac }}"
           type: dhcp
       delegate_to: localhost
