--- a/DeployTemplateOpenShift.yml
+++ b/DeployTemplateOpenShift.yml
@@ -78,6 +78,7 @@
         name: "{{ vm_name }}"
         gather_network_info: false
         networks:
-          - state: present
-            mac: "{{ vm_mac }}"
+          - name: "VM Network"
+            state: present
+            manual_mac: "{{ vm_mac }}"
       delegate_to: localhost
