--- a/InstallOpenShiftBastion.yml
+++ b/InstallOpenShiftBastion.yml
@@ -19,13 +19,13 @@
 
     - name: Donwload file for ocp4
       unarchive:
-        src: http://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux-4.3.0.tar.gz
+        src: http://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.2.16/openshift-client-linux-4.2.16.tar.gz
         dest: /tmp/ocp4
         remote_src: yes
 
     - name: Donwload file for ocp4
       unarchive:
-        src: http://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-install-linux-4.3.0.tar.gz
+        src: http://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.2.16/openshift-install-linux-4.2.16.tar.gz
         dest: /tmp/ocp4
         remote_src: yes
 
