--- a/InstallOpenShiftBastion.yml
+++ b/InstallOpenShiftBastion.yml
@@ -85,9 +85,9 @@
     - name: Transfer bootstrap ignifition file from Bastion to Webserver
       synchronize:
         src: ~/openshift4/bootstrap.ign
-        dest: /var/www/html/ignition/test/bootstrap.ign
-        mode: pull
-      delegate_to: "{{ webserver }}"
+        dest: rsync://{{ webserver }}/var/www/html/ignition/test/bootstrap.ign
+      #  mode: pull
+      #delegate_to: "{{ webserver }}"
     
     - name: Convert ignition files to base64
       command: "base64 -w0 < {{item }}.ign > {{ item }}.64"
