--- a/InstallOpenShiftBastion.yml
+++ b/InstallOpenShiftBastion.yml
@@ -73,8 +73,8 @@
         regexp: '^mastersSchedulable:'
         line: "mastersSchedulable: false"
 
-    - name: Create ignition for OpenShift
-      command: openshift-install create ignition-configs --dir ~/openshift4
+#    - name: Create ignition for OpenShift
+#      command: openshift-install create ignition-configs --dir ~/openshift4
     
 # Trouver pour créer append-bootstrap.ign
     - name: Download append-bootstrap.ign
@@ -82,12 +82,12 @@
         url: http://webocp4.fuji.bsctdas.local/ocp4file/append-bootstrap.ign
         dest: ~/openshift4/append-bootstrap.ign
 
-    - name: Transfer bootstrap ignifition file from Bastion to Webserver
-      synchronize:
-        src: ~/openshift4/bootstrap.ign
-        dest: rsync://{{ webserver }}/var/www/html/ignition/test/bootstrap.ign
+#    - name: Transfer bootstrap ignifition file from Bastion to Webserver
+#      synchronize:
+#        src: ~/openshift4/bootstrap.ign
+#        dest: rsync://{{ webserver }}/var/www/html/ignition/test/bootstrap.ign
       #  mode: pull
-      delegate_to: "10.50.51.107"
+#      delegate_to: "10.50.51.107"
     
     - name: Convert ignition files to base64
       command: "base64 -w0 < {{item }}.ign > {{ item }}.64"
