--- a/ocp4/InstallOpenShiftBastion.yml
+++ b/ocp4/InstallOpenShiftBastion.yml
@@ -118,7 +118,7 @@
       
     
     - name: Convert ignition files to base64
-      command: "base64 -w0 {{item }}.ign > {{ item }}.64"
+      shell: "base64 -w0 {{item }}.ign > {{ item }}.64"
       with_items:
         - append-bootstrap
 #        - master
