--- a/ocp4/InstallOpenShiftBastion.yml
+++ b/ocp4/InstallOpenShiftBastion.yml
@@ -71,7 +71,7 @@
         mode: '0755'
 
 #Utiliser Template pour faire le fichier install-config.yaml
-    - name: Copy join command to local file
+    - name: Copy install-config to local file
       local_action: 
         get_url:
           url: http://webocp4.fuji.bsctdas.local/ocp4file/install-config.yaml.j2
