--- a/ocp4/InstallOpenShiftBastion.yml
+++ b/ocp4/InstallOpenShiftBastion.yml
@@ -121,7 +121,7 @@
       
     
     - name: Convert ignition files to base64
-      shell: "~/openshift4/base64 -w0 {{item }}.ign > ~/openshift4/{{ item }}.64"
+      shell: "base64 -w0 ~/openshift4/{{item }}.ign > ~/openshift4/{{ item }}.64"
       with_items:
         - append-bootstrap
 #        - master
